웹 뷰페이지 제외하고 모든 구성 완료

--- a/web project/.recommenders/caches/identified-project-coordinates.json
+++ b/web project/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\jooon\\Desktop\\Bigdata_project\\web project\\Unknown_Error_WebProject","type":"PROJECT","hints":{"PROJECT_NAME":"Unknown_Error_WebProject"}},"unknown.error:web:1.0.0"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_151","type":"JRE","hints":{}},"jre:jre:1.8.0"]]
